@@ -1,5 +1,7 @@
 -- --
 * Fix service install on Windows
+* Fix plugins not being unloaded correctly
+* Use boost asio for sockets instead of home brew
 
 -- 2.2 2008-02-12 --
 * access.lua: fixed message type for MSG
